--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav ul li a {
 .banner {
     text-align: center;
     background: url('banner.jpg') no-repeat center center/cover;
-    color: white;
+    color: #333;
     padding: 50px 0;
     font-size: 24px;
 }
