--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav ul li a {
 
 .banner {
     text-align: center;
-    background: url('banner.jpg') no-repeat center center/cover;
+    background: url('Portada.jpg') no-repeat center center/cover;
     color: #333;
     padding: 50px 0;
     font-size: 24px;
